Added some more fields

--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -43,8 +43,13 @@
 			<li class="fifth"><a href="{% url 'revisions-policy' %}" rel="nofollow">Revision Policy</a></li>
 			<li class="fifth"><a href="{% url 'disclaimer' %}" rel="nofollow">Disclaimer</a></li>
 		</ul>
-	
+		
     </div>
+	
+	<div class="row text-center" style="padding-top:20px;border-top: 1px solid #524F4F;">
+		<script type="text/javascript" src="https://sealserver.trustwave.com/seal.js?code=bfcd707842d24f5ea073454196d6e258"></script>
+	</div>
+   
    </div>
 
   <div id="copyright">
