--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -4,7 +4,7 @@
 		  <!-- BEGIN TOP BAR LEFT PART -->
 		  <div class="col-md-6 col-sm-6 additional-info">
 			  <ul>
-				  <li><i class="fa fa-phone"></i><span>+1 000 000 0000</span></li>
+				  <li><i class="fa fa-phone"></i><span>+1 888 243 7406</span></li>
 				  <li><i class="fa fa-envelope-o"></i><span>info@essaycoffee.com</span></li>
 			  </ul>
 		  </div>
@@ -29,7 +29,7 @@
 
 <header id="header">
  <div class="container">
-   <div id="logo"><a href="{% url 'home' %}"><img src="{{ STATIC_URL }}images/demo/logo.png"></a></div>
+   <div id="logo"><a href="{% url 'home' %}">EssayCoffee{#<img src="{{ STATIC_URL }}images/demo/logo.png"></a>#}</div>
 
    <a href="javascript:void(0);" class="mobi-toggler"></a>
 
