--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -41,14 +41,16 @@
 
 <!-- BEGIN LEFT SIDEBAR LAYOUT -->
 <div id="layout-left" class="col-md-3 col-sm-9">
-	{% comment %}
+	
 	<address>
+		{% comment %}
 		<h3>Our location</h3>
 		795 Park Ave, Suite 120<br>
 		San Francisco, CA 94107<br>
-		<abbr title="Phone">P:</abbr> (234) 145-1810
+		{% endcomment %}
+		<abbr title="Phone">P:</abbr> +1 888 243 7406
 	</address>
-	{% endcomment %}
+	
 
 	<address>
 		<strong>Email</strong>
