--- a/templates/pages/privacy-policy.html
+++ b/templates/pages/privacy-policy.html
@@ -136,7 +136,7 @@
 	<section>
 		<h4>14. Contact Us</h4>
 		<p>You can contact us via email or by phone:</p>
-		<p>Phone: 1-000-000-00-00</p>
+		<p>Phone: +1 888 243 7406</p>
 		<p>Email: <a href="mailto:info@essaycoffee.com" class="more">info@essaycoffee.com</a></p>
 	</section>
 </div>
