--- a/templates/pages/terms-conditions.html
+++ b/templates/pages/terms-conditions.html
@@ -36,7 +36,7 @@
 	
 	<section>
 		<h4>Product Usage</h4>
-		<p>All dissertations, research papers, book reports, term papers and all other types of written assignments provided by EssayCoffee.com are intended for research/reference purposes only and must not be used in contravention of international copyright limitations. EssayCoffee.com is not responsible for failure to learn the material covered by the assignment or improper usage of research contained therein.</p>
+		<p>All dissertations, research papers, book reports, term papers and all other types of written assignments provided by <strong>EssayCoffee.com</strong> are intended for research/reference purposes only and must not be used in contravention of international copyright limitations. <strong>EssayCoffee.com</strong> is not responsible for failure to learn the material covered by the assignment or improper usage of research contained therein.</p>
 		<p>Due to the fact that our papers are not for submission and are intended to be used to assist you in writing your own essay, <strong>EssayCoffee.com</strong> does not hold any responsibility for or provide any guarantees in relation to the outcome or consequences of submission to any academic institution. <strong>We only guarantee the writing and research standards of our essays.</strong></p>
 	</section>
 	
