--- a/templates/auth/password_reset_complete.html
+++ b/templates/auth/password_reset_complete.html
@@ -18,9 +18,9 @@
 <div id="layout-right" class="col-md-3 col-sm-12">
   <section class="sibebar-section">
 	<ul class="list-group">
-	  <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
-	  <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
-	  <li class="list-group-item active"><a href="{% url 'forgot' %}">Restore Password</a></li>
+	  <li class="list-group-item"><a href="{% url 'login' %}" rel="nofollow">Log In</a></li>
+	  <li class="list-group-item"><a href="{% url 'registration' %}" rel="nofollow">Registration</a></li>
+	  <li class="list-group-item active"><a href="{% url 'forgot' %}" rel="nofollow">Restore Password</a></li>
 	</ul>
   </section>
 </div>
