--- a/templates/auth/password_update_done.html
+++ b/templates/auth/password_update_done.html
@@ -16,13 +16,14 @@
 
 {% block sidebar_right %}
 <div id="layout-right" class="col-md-3 col-sm-12">
-  <section class="sibebar-section">
-	<ul class="list-group">
-	  <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
-	  <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
-	  <li class="list-group-item active"><a href="{% url 'password-change' %}">Update Password</a></li>
-	</ul>
-  </section>
+	<section class="sibebar-section">
+		<ul class="list-group">
+			<li class="list-group-item"><a href="{% url 'my-orders' %}">My Orders</a></li>
+			<li class="list-group-item"><a href="{% url 'my-account' request.user.pk %}">My account</a></li>
+			<li class="list-group-item active"><a href="{% url 'password-change' %}">Password change</a></li>
+			<li class="list-group-item"><a href="{% url 'logout' %}">Exit</a></li>
+		</ul>
+	</section>
 </div>
 {% endblock %}
 
