--- a/templates/pages/privacy-policy.html
+++ b/templates/pages/privacy-policy.html
@@ -10,7 +10,7 @@
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'privacy-policy' %}" class="active">Privacy Policy</a>
+	<a href="{% url 'privacy-policy' %}" rel="nofollow" class="active">Privacy Policy</a>
 </div>
 {% endblock %}
 			
@@ -86,9 +86,9 @@
 		<p>The use of cookies by our [partners, affiliates, tracking utility company, service providers] is not covered by our privacy policy. We do not have access or control over these cookies. Our [partners, affiliates, tracking utility company, service providers] use session ID and persistent cookies [to make it easier for you to navigate our site, in order for you to use the shopping cart, etc.]</p>
 		<p>Our third party partners employ clear gifs (a.k.a. Web Beacons/Web Bugs), images, and scripts that help them better manage content on our site. We do [not] tie the information gathered to our Customers’ or Users’ personally identifiable information.</p>
 		<h5>3rd Party Tracking Technologies</h5>
-		<p>We partner with a third party ad network to either display advertising on our Web site or to manage our advertising on other sites. Our ad network partner uses cookies and Web beacons to collect non-personally identifiable information about your activities on this and other Web sites to provide you targeted advertising based upon your interests. If you wish to not have this information used for the purpose of serving you targeted ads, you may opt-out by clicking <a href="http://www.preferences.truste.com" class="more" target="_blank">Here</a>. Please note this does not opt you out of being served advertising. You will continue to receive generic ads.</p>
+		<p>We partner with a third party ad network to either display advertising on our Web site or to manage our advertising on other sites. Our ad network partner uses cookies and Web beacons to collect non-personally identifiable information about your activities on this and other Web sites to provide you targeted advertising based upon your interests. If you wish to not have this information used for the purpose of serving you targeted ads, you may opt-out by clicking <a href="http://preferences.truste.com" class="more" target="_blank">Here</a>. Please note this does not opt you out of being served advertising. You will continue to receive generic ads.</p>
 		<p>NOTE: Participant may also link to the NAI opt-out mechanism <a href="http://www.networkadvertising.org/managing/opt_out.asp" class="more" target="_blank">http://www.networkadvertising.org/managing/opt_out.asp</a>.</p>
-		<p>(Google AdSense/Adwords) We use Google AdSense to publish ads on this site. When you view or click on an ad a cookie will be set to help better provide advertisements that may be of interest to you on this and other Web sites. You may opt-out of the use of this cookie by visiting Google’s Advertising and Privacy page: <a href="http://www.networkadvertising.org/managing/opt_out.asp" class="more" target="_blank">http://www.google.com/privacy_ads.html</a>. Please visit our <a href="http://www.preferences.truste.com" class="more" target="_blank">Cookies Policy</a> web page for more information.</p>
+		<p>(Google AdSense/Adwords) We use Google AdSense to publish ads on this site. When you view or click on an ad a cookie will be set to help better provide advertisements that may be of interest to you on this and other Web sites. You may opt-out of the use of this cookie by visiting Google’s Advertising and Privacy page: <a href="http://www.networkadvertising.org/managing/opt_out.asp" class="more" target="_blank">http://www.google.com/privacy_ads.html</a>. Please visit our <a href="http://preferences.truste.com" class="more" target="_blank">Cookies Policy</a> web page for more information.</p>
 	</section>
 	
 	<section>
