--- a/templates/pages/progressive-delivery.html
+++ b/templates/pages/progressive-delivery.html
@@ -10,7 +10,7 @@
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'progressive-delivery' %}" class="active">Progressive Delivery</a>
+	<a href="{% url 'progressive-delivery' %}" rel="nofollow" class="active">Progressive Delivery</a>
 </div>
 {% endblock %}
 			
