--- a/templates/pages/revisions-policy.html
+++ b/templates/pages/revisions-policy.html
@@ -10,7 +10,7 @@
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'revisions-policy' %}" class="active">Revision Policy</a>
+	<a href="{% url 'revisions-policy' %}" rel="nofollow" class="active">Revision Policy</a>
 </div>
 {% endblock %}
 			
