--- a/templates/pages/social-responsibility-notice.html
+++ b/templates/pages/social-responsibility-notice.html
@@ -10,7 +10,7 @@
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'social-responsibility-notice' %}" class="active">Director's Notice On Social Responsibility</a>
+	<a href="{% url 'social-responsibility-notice' %}" rel="nofollow" class="active">Director's Notice On Social Responsibility</a>
 </div>
 {% endblock %}
 			
