--- a/templates/auth/password_reset_confirm.html
+++ b/templates/auth/password_reset_confirm.html
@@ -18,9 +18,9 @@
 <div id="layout-right" class="col-md-3 col-sm-12">
   <section class="sibebar-section">
 	<ul class="list-group">
-	  <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
-	  <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
-	  <li class="list-group-item active"><a href="{% url 'forgot' %}">Restore Password</a></li>
+	  <li class="list-group-item"><a href="{% url 'login' %}" rel="nofollow">Log In</a></li>
+	  <li class="list-group-item"><a href="{% url 'registration' %}" rel="nofollow">Registration</a></li>
+	  <li class="list-group-item active"><a href="{% url 'forgot' %}" rel="nofollow">Restore Password</a></li>
 	</ul>
   </section>
 </div>
@@ -41,7 +41,7 @@
               <p><button class="btn btn-primary" type="submit">Change my password</button></p>
             </form>
           {% else %}
-            <h1>Password reset unsuccessful.</h1>
+            <h4>Password reset unsuccessful.</h4>
             <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
           {% endif %}
       </div>
