--- a/templates/auth/password_update_form.html
+++ b/templates/auth/password_update_form.html
@@ -16,15 +16,18 @@
 {% endblock %}
 
 {% block sidebar_right %}
+<!-- BEGIN RIGHT SIDEBAR LAYOUT -->
 <div id="layout-right" class="col-md-3 col-sm-12">
-  <section class="sibebar-section">
-	<ul class="list-group">
-	  <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
-	  <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
-	  <li class="list-group-item active"><a href="{% url 'forgot' %}">Change Password</a></li>
-	</ul>
-  </section>
+	<section class="sibebar-section">
+		<ul class="list-group">
+			<li class="list-group-item"><a href="{% url 'my-orders' %}">My Orders</a></li>
+			<li class="list-group-item"><a href="{% url 'my-account' request.user.pk %}">My account</a></li>
+			<li class="list-group-item active"><a href="{% url 'password-change' %}">Password change</a></li>
+			<li class="list-group-item"><a href="{% url 'logout' %}">Exit</a></li>
+		</ul>
+	</section>
 </div>
+<!-- END RIGHT SIDEBAR LAYOUT -->
 {% endblock %}
 
 {% block content %}
