--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -10,7 +10,7 @@
 <div class="breadcrumbs">
   <a href="{% url 'home' %}">Home</a>
   <span class="separator"><i class="fa fa-angle-right"></i></span>
-  <a href="{% url 'registration' %}" class="active">Registration</a>
+  <a href="{% url 'registration' %}" rel="nofollow" class="active">Registration</a>
 </div>
 {% endblock %}
 
@@ -18,9 +18,9 @@
 <div id="layout-right" class="col-md-3 col-sm-12">
   <section class="sibebar-section">
     <ul class="list-group">
-      <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
-      <li class="list-group-item active"><a href="{% url 'registration' %}">Registration</a></li>
-      <li class="list-group-item"><a href="{% url 'forgot' %}">Restore Password</a></li>
+      <li class="list-group-item"><a href="{% url 'login' %}" rel="nofollow">Log In</a></li>
+      <li class="list-group-item active"><a href="{% url 'registration' %}" rel="nofollow">Registration</a></li>
+      <li class="list-group-item"><a href="{% url 'forgot' %}" rel="nofollow">Restore Password</a></li>
     </ul>
   </section>
 </div>
