--- a/templates/pages/password-change.html
+++ b/templates/pages/password-change.html
@@ -20,7 +20,7 @@
 	<section class="sibebar-section">
 		<ul class="list-group">
 			<li class="list-group-item"><a href="{% url 'my-orders' %}">My Orders</a></li>
-			<li class="list-group-item"><a href="{% url 'my-account' %}">My account</a></li>
+			<li class="list-group-item"><a href="{% url 'my-account' request.user.pk %}">My account</a></li>
 			<li class="list-group-item active"><a href="{% url 'password-change' %}">Password change</a></li>
 			<li class="list-group-item"><a href="{% url 'logout' %}">Exit</a></li>
 		</ul>
