--- a/templates/pages/plagiarism-free-guarantee.html
+++ b/templates/pages/plagiarism-free-guarantee.html
@@ -10,7 +10,7 @@
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'plagiarism-free-guarantee' %}" class="active">Plagiarism-Free Guarantee</a>
+	<a href="{% url 'plagiarism-free-guarantee' %}" rel="nofollow" class="active">Plagiarism-Free Guarantee</a>
 </div>
 {% endblock %}
 			
