--- a/templates/pages/terms-conditions.html
+++ b/templates/pages/terms-conditions.html
@@ -10,7 +10,7 @@
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'terms-conditions' %}" class="active">Terms and conditions</a>
+	<a href="{% url 'terms-conditions' %}" rel="nofollow" class="active">Terms and conditions</a>
 </div>
 {% endblock %}
 			
