--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -36,9 +36,9 @@
 
  <!--BEGIN TABS-->
  <ul class="nav nav-tabs" role="tablist">
-  <li class="{% if request.GET.details or not request.GET.files and not request.GET.messages%}active{% endif %}"><a href="#details" role="tab" data-toggle="tab">Order details</a></li>
-  <li class="{% if request.GET.files %}active{% endif %}"><a href="#files" role="tab" data-toggle="tab">Files</a></li>
-  <li class="{% if request.GET.messages %}active{% endif %}"><a href="#messages" role="tab" data-toggle="tab">Messages ({{msgs|length}})</a></li>
+  <li class="{% if request.GET.details or not request.GET.files and not request.GET.messages%}active{% endif %}"><a href="{% url 'order-id' order.pk %}?details=1#details" role="tab" data-toggle="tab">Order details</a></li>
+  <li class="{% if request.GET.files %}active{% endif %}"><a href="{% url 'order-id' order.pk %}?files=1#files" role="tab" data-toggle="tab">Files</a></li>
+  <li class="{% if request.GET.messages %}active{% endif %}"><a href="{% url 'order-id' order.pk %}?messages=1#messages" role="tab" data-toggle="tab">Messages ({{msgs|length}})</a></li>
  </ul>
  
  <div class="tab-content">
